<resources>
    <!-- GERAIS -->
    <string name="app_name">Mobile v1.0</string>
    <string name="logo">Logo Golden Company</string>
    <string name="botao_perfil">Perfil do Usuário</string>
    <string name="botao_actions">Ações - Cadastrar, Alterar, Consultar e excluir</string>
    <string name="lorem_ipsun_sm">Lorem ipsum dolor sit amet consectetur adipisicing elit.</string>
    <string name="lorem_ipsun_md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin metus arcu, eleifend consequat ornare in, laoreet eget ante. Pellentesque rhoncus velit orci, porttitor blandit erat tincidunt sit amet.</string>
    <string name="lorem_ipsun_lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin metus arcu, eleifend consequat ornare in, laoreet eget ante. Pellentesque rhoncus velit orci, porttitor blandit erat tincidunt sit amet. Maecenas sodales lorem ut dui viverra, consequat mollis dolor aliquet. Aliquam eu nibh tincidunt, dignissim arcu eu, porttitor libero. In augue dolor, efficitur eget ex at, egestas tristique libero. Nulla tincidunt ullamcorper sapien, vitae ullamcorper quam.</string>


    <!-- TELA USUÁRIO -->
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_automatico">Dark Mode Automático</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="area_do_usuario">Área do usuário</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="senha_nova">Senha Nova</string>
    <string name="alterar">Alterar</string>
    <string name="anotaces">Anotações</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="alterar_foto_de_perfil">Alterar Foto de Perfil</string>
    <string name="endereco_text">" %1$s \n"</string>

    <!-- TELA AÇÕES -->
    <string name="socios">Sócios</string>
    <string name="servicos">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="atividades">Atividades</string>

    <!-- TELA HOME -->
    <string name="bem_vindo">BEM-VINDO(A)!</string>
    <string name="nossa_historia_titulo">Nossa História</string>
    <string name="o_que_fazemos_titulo">O que Fazemos</string>
    <string name="mapa">Mapa</string>
    <string name="versao_app">App v1.0</string>
    <string name="nossa_historia_text">Em 2020, um grupo de 5 amigos que se encontraram enquanto estudavam<br /><br />programação em sua Etec, descobriram compartilhar de um mesmo sonho: construir uma empresa de desenvolvimento de software e transformar o futuro das empresas interessadas em se inserir em um mundo virtual, desenvolvendo softwares eficazes, seguros e qualificados, com facilidade de uso e com foco na melhor experiência para o usuário.<br /><br />Naquele ano, ainda que trabalhassem sempre em conjunto, cada um dos membros possuía maior afinidade em uma determinada área da programação:<br /><br />Guilherme em análise de sistemas, Larissa em programação web, Leticia em banco de dados e front-end, Mateus Taveira em programação back-end e Wesley Spiandorim como designer. Unindo as habilidades e a criatividade, começaram a desenvolver o esboço de sua empresa.<br /><br />A princípio, o projeto começou em encontros diários intercalados na casa de Leticia e na biblioteca, onde realizavam leituras sobre administração, gestão de negócios e assuntos ligados a programação. Concentraram-se em moldar sua empresa, decidindo nome, hoje, Golden Company, slogan, missões, valores e visão, entre diversos assuntos necessários para sua abertura da empresa.<br /><br />Antes de iniciarem a sua divulgação, pensaram então em ter um exemplo do que iriam oferecer em sua empresa, construindo um software do zero: pensaram em um sistema de gerenciamento de bicicleta e patinete, que desenvolveram em 6 meses. Quando finalizaram o sistema, já com seus cartões de visita, flyers e redes sociais em mãos, começaram a divulgar seu trabalho.</string>
    <string name="o_que_fazemos_texto">Hoje, a empresa cresce exponencialmente, acompanhada de mudanças na equipe: formamos agora uma família de sete funcionários qualificados e experientes com os já conhecido Leticia, Larissa, Guilherme Lemes, Mateus Taveira e Wesley e os recém-contratados Erin e Gustavo Pereira.<br /><br />Continuamos com o foco na construção de softwares de ponta para os mais variados tipos de empresas. Possuímos clientes fiéis e satisfeitos com nossos trabalhos e parcerias essenciais para compor nosso empreendimento, como a Spring Library, a Amazon, a Etec Professor Basilides de Godoy, a Saga entre outras parcerias.</string>

    <!-- TELA MAIN (login) -->
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>

    <!-- CADASTROS -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="invalid_lat_long_used">Latitude invalida</string>
    <string name="service_not_available">Serviço indisponível</string>
    <string name="no_address_found">Nenhum Endereço encontrado</string>
    <string name="permissao_negada">Permissão Negada</string>
    <string name="loading">Carregando...</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="cadastrar_servico">Cadastrar Serviço</string>
    <string name="hint_desc_serv">Descrição do serviço</string>

    <string name="cadastrar_socio">Cadastrar Sócio</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_dtnasc">Data de nascimento</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_cargo">Cargo</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_tel">Telefone</string>
    <string name="hint_email">Email</string>
    <string name="hint_uf">UF</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_logradouro">Logradouro</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_numero">Número</string>

    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="hint_cnpj">CNPJ</string>

    <string name="cadastrar_atividade">Cadastrar Atividade</string>
    <string name="hint_desc_atv">Descrição da Atividade</string>
    <string name="hint_dtinicio">Data de início</string>
    <string name="hint_dtfim">Data de fim</string>
    <string name="hint_func_id_resp">ID do funcionário responsável</string>
    <string name="hint_cli_cnpj">CPNJ do cliente</string>
    <string name="hint_serv_id">ID do serviço</string>

    <string name="cadastrar_contato">Contato</string>
    <string name="cadastrar_endereco">Endereço</string>
    <string name="atribuicoes">Atribuições</string>
    
    <!-- CONSULTAS -->
    <string name="novo_registro">Novo registro</string>
    <string name="excluir_registro">Você tem certeza quer quer excluir esse registro?</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="delete_ok">Registro excluído com sucesso.</string>
    <string name="delete_registro">Excluír registro</string>
    <string name="Visualizar">Visualizar</string>
    <string name="Clique_Local">Clique para obter sua localização</string>

    <!-- ... -->


</resources>