<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/layout_navbar" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/txtVersaoapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtBemvindo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bem_vindo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNossahistoriaTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBemvindo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nossa_historia_titulo"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtNossahistoriaTexto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNossahistoriaTitulo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/lorem_ipsun_lg"
                android:justificationMode="inter_word"
                android:textColor="#222222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtOquefazemosTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNossahistoriaTexto"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/o_que_fazemos_titulo"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtOquefazemosTexto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtOquefazemosTitulo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:justificationMode="inter_word"
                android:text="@string/lorem_ipsun_lg"
                android:textColor="#222222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtMapa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtOquefazemosTexto"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mapa"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- Mapa aqui... ? -->
            <fragment
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/txtMapa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

        </RelativeLayout>


    </ScrollView>

    <TextView
        android:id="@+id/txtVersaoapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/versao_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        android:textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>